--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,8 +32,19 @@
     <string name="cel">Celsius a Fahrenheit</string>
     <string name="far">Fahrenheit a Celsius</string>
     <string name="res">Resultado</string>
-    <string name="btnCalcular">Calcular</string>
-    <string name="btnLimpiar">Limpiar</string>
-    <string name="btnCerrar">Cerrar</string>
+
+    <!-- Strign Actividad Monedas -->
+    <string name="cantidad">Cantidad a convertir</string>
+    <string-array name="array_conversiones">
+        <item>Pesos Mexicanos - Dolares Americanos</item>
+        <item>Pesos Mexicanos - Dolares Canadienses</item>
+        <item>Pesos Mexicanos - Euros</item>
+        <item>Dolares Americanos - Pesos Mexicanos</item>
+        <item>Dolares Canadienses - Pesos Mexicanos</item>
+        <item>Euros - Pesos Mexicanos</item>
+    </string-array>
+    <string name="dolara">19.75</string>
+    <string name="dolarc">14.75</string>
+    <string name="euro">22.02</string>
 
 </resources>
