--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,8 +61,8 @@
     <string name="po">Porcentaje de pago inicial</string>
     <string name="plazos">Plazos</string>
     <string name="pmensual">Pago mensual: </string>
-    <string name="pinicial">Pago inicial</string>
-    <string name="porinicial">Porcentaje de pago inicial: </string>
+    <string name="pinicial">Porcentaje de pago inicial</string>
+    <string name="porinicial">Pago inicial: </string>
     <string name="tfin">Total a financiar: </string>
 
 </resources>
